--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 layout: page
 title: WHO AM I
 description: 언더독일때 강한 도전자
-background: '/img/blog_thumb_1200x628.jpg'
+background: '/img/blog_thumb_rocky_1200x628.jpg'
 ---
 <p align="center">모든 마케팅은 고객여정에 답이 있다고 생각합니다.<br>
 고객의 발자취를 데이터로 분석하는 것에 관심이 있습니다.<br><br>
 변화가 없는 듯 하다가 조금씩 변하고, 가끔은 확 변하기도 하는 변덕스러운 <br>유저와 매체에 대해 끝없이 공부하고 실험합니다.<br><br>
-현재 친환경 쿡웨어 브랜드 'Grainders' 를 만들고 있습니다.</p>
+현재 친환경 키친웨어 'Grainders' 를 만들고 있습니다.</p>
